2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02743] RFC2818 server identity check
	* NEWS: RFC2818 server identity check
	* istream.c (ssl_check_cert_ident): added
	* istream.h (ssl_check_cert_ident): ditto
	* istream.h: #include <x509v3.h>
	* url.c (free_ssl_ctx): ssl_ctx = NULL
	* url.c (openSSLHandle): arg hostname to check cert id
	* url.c (openSSLHandle): check SSL_get_verify_result 
			if ssl_verify_server
	* url.c (openSSLHandle): check server identity by ssl_check_cert_ident
	* url.c (openURL): openSSLHandle with pu->host

2001-12-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02715] bugfix in scripts/multipart/multipart.cgi.in
	  was not applied
	* scripts/multipart/multipart.cgi: fix "use NKF" check

2001-12-26  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02732] fix Debian Bug#126381
	  		- Passwords entered for HTTPS are used for HTTP
	* etc.c (find_auth): add port arg
	* etc.c (find_auth_cookie): add port arg
	* etc.c (add_auth_cookie): add port arg
	* file.c (getAuthCookie): find_auth_cookie(host, port, realm)
	* file.c (loadGeneralFile): add_auth_cookie(host, port, realm, ss)
	* fm.h (struct auth_cookie): add port
	* ftp.c (openFTP): find_auth_cookie(host, port, user)
	* ftp.c (openFTP): add_auth_cookie(host, port, user, pwd)
	* proto.h (find_auth_cookie): add port
	* proto.h (add_auth_cookie): add port

2001-12-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02729]
	* doc-jp/README.func (DOWNLOAD): update
	* doc-jp/README.func (EDIT): ditto
	* doc-jp/README.func (EDIT_SCREEN): ditto
	* doc-jp/README.func (SAVE): ditto
	* doc/README.func (DOWNLOAD): ditto
	* doc/README.func (SAVE): ditto
	* doc/README.func (SUBMIT): ditto
	* scripts/w3mhelp.cgi.in: $key is normalized by &norm_key
	* scripts/w3mhelp.cgi.in: keyfunc update
	* scripts/w3mhelp.cgi.in (load_keymap): check data, &norm_key
	* scripts/w3mhelp.cgi.in (norm_key): added

2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>
